# TradeMind

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/tasks/: README.md
config/: .env.example  settings.py
scripts/: gem_discovery_demo.py  quick_start.py  quick_test.py
src/trademind/: __init__.py
src/trademind/analyzers/: __init__.py  gem_finder.py  score_calculator.py
src/trademind/collectors/: __init__.py  bscscan.py  coingecko.py
src/trademind/monitors/: __init__.py  whale_tracker.py
src/trademind/utils/: __init__.py  logger.py
